--- a/l4esitewise_pipeline_cfn/sitewise_export_s3.yml
+++ b/l4esitewise_pipeline_cfn/sitewise_export_s3.yml
@@ -1,17 +1,5 @@
 # Copyright 2019 Amazon.com, Inc. or its affiliates. All Rights Reserved.
 
-# Licensed under the Apache License, Version 2.0 (the "License");
-# you may not use this file except in compliance with the License.
-# You may obtain a copy of the License at
-
-#     http://www.apache.org/licenses/LICENSE-2.0
-
-# Unless required by applicable law or agreed to in writing, software
-# distributed under the License is distributed on an "AS IS" BASIS,
-# WITHOUT WARRANTIES OR CONDITIONS OF ANY KIND, either express or implied.
-# See the License for the specific language governing permissions and
-# limitations under the License.
-
 ---
 AWSTemplateFormatVersion: "2010-09-09"
 Description: AWS template for IoT SiteWise export to S3.
@@ -76,10 +64,6 @@ Parameters:
     ConstraintDescription: "The local resource prefix can have between 3 and 23 characters. Valid characters: a-z, 0-9, and _ (underscore)"
     MinLength: 3
     MaxLength: 23
-  codebucket:
-    Type: String
-    Description: S3 location for lambda function that you saved
-    MinLength: 3
   SiteWiseAsset1Id:
     Type: String
     Description: AssetId for SiteWise asset1
@@ -658,8 +642,8 @@ Resources:
         - Arn
       Runtime: python3.7
       Code:
-        S3Bucket: !Sub ${codebucket}
-        S3Key: l4einference-schedule.zip
+        S3Bucket: !Sub lookoutforequipmentbucket-${AWS::Region}
+        S3Key: lambdafunction/l4einference-schedule.zip
       Description: >-
         Lambda function to trigger Athena query and output data for L4E inference
       MemorySize: 128
@@ -672,8 +656,8 @@ Resources:
       CompatibleRuntimes:
       - python3.7
       Content:
-        S3Bucket: !Sub ${codebucket}
-        S3Key: awswrangler-layer-2.10.0-py3.7.zip
+        S3Bucket: !Sub lookoutforequipmentbucket-${AWS::Region}
+        S3Key: lambdafunction/awswrangler-layer-2.10.0-py3.7.zip
       Description: Pandas for Python
       LayerName:
         Fn::Sub: ${LocalResourcePrefix}_datawranglerlayer     
@@ -772,8 +756,8 @@ Resources:
         - Arn
       Runtime: python3.7
       Code:
-        S3Bucket: !Sub ${codebucket}
-        S3Key: l4eoutput-2sitewise.zip
+        S3Bucket: !Sub lookoutforequipmentbucket-${AWS::Region}
+        S3Key: lambdafunction/l4eoutput-2sitewise.zip
       Description: >-
         An Amazon S3 trigger that retrieves L4e output to s3 
       MemorySize: 128
